
riakbuffer_LDADD = \
        levent2/.libs/libevent_core.a \
        levent2/.libs/libevent_extra.a

bin_PROGRAMS = \
        riakbuffer
        
riakbuffer_SOURCES = \
        common.h \
        log.h \
        log.c \
        utils.h \
        utils.c \
        app_config.h \
        app_config.c \
        parser_p.h \
        parser.h \
        parser.c \
        slab_p.h \
        slab.h \
        slab.c \
        stack.h \
        stack.c \
        app.c

SUBDIRS = \
        levent2

